# simp_linalg

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  macros.rs  prelude.rs
src/matrix/: add_impl.rs  lambda.rs  map.rs  mod.rs  mul_impl.rs  prim_mul_impl.rs
src/matrix_impl/: add_impl.rs  lambda.rs  map.rs  mod.rs  mul_impl.rs  prelude.rs  traits.rs
src/matrix_impl/mut_impls/: add_impl.rs  lambda.rs  map.rs  mod.rs  mul_impl.rs
src/vector/: add_impl.rs  lambda.rs  map.rs  mod.rs  mul_impl.rs  prim_add_impl.rs  prim_mul_impl.rs
src/vector_impl/: add_impl.rs  lambda.rs  map.rs  mod.rs  mul_impl.rs  prelude.rs  traits.rs
src/vector_impl/mut_impls/: add_impl.rs  lambda.rs  map.rs  mod.rs
tests/: readme.rs
