[package]
name = "simp_linalg"
version = "0.1.4"
edition = "2021"

description = "A generically defined, light-weight linear algebra library for simple addition and multiplication of vectors and matrices."
license = "MIT"
repository = "https://github.com/the-mcmaster/simp_linalg"
keywords = ["linear-algebra", "vector", "matrix"]
categories = ["mathematics", "science"]
